Fixed z-index.

--- a/static/css/event/every-moment-base.less
+++ b/static/css/event/every-moment-base.less
@@ -6,9 +6,11 @@
   margin: auto;
   left: 0;
   right: 0;
+  z-index: 1000;
 }
 
 #tabzilla {
+  z-index: 1000;
   margin-top: -2px;
   .transition(all 0.2s ease-in-out);
 }
@@ -25,7 +27,7 @@
 
 #main-nav {
   position: fixed;
-  z-index: 1000;
+  z-index: 500;
   bottom: 5%;
   left: 0;
   width: 40px;
@@ -126,7 +128,7 @@
 
 #top-nav {
   position: fixed;
-  z-index: 1000;
+  z-index: 500;
   top: 10px;
   left: 10px;
   width: 210px;
@@ -194,7 +196,7 @@
 //fixed position left hand navigation
 #side-nav {
   position: fixed;
-  z-index: 1000;
+  z-index: 500;
   top: 50%;
   right: 30px;
   width: 20px;
