--- a/static/css/event/every-moment.less
+++ b/static/css/event/every-moment.less
@@ -803,7 +803,7 @@
 }
 .start-upload-button {
   display: block;
-  z-index: 1000;
+  z-index: 200;
   position: fixed;
   right: 200px;
   bottom: -200px;
@@ -863,7 +863,7 @@
 #notice {
   position: fixed;
   opacity: 0;
-  z-index: 100;
+  z-index: 800;
   right: -270px;
 //  right: 0px;
   top: 0;
